dfir_rs/tests/snapshots/surface_scheduling__nospin_issue_961@graphvis_mermaid.snap
---
source: dfir_rs/tests/surface_scheduling.rs
expression: df.meta_graph().unwrap().to_mermaid(cfg)
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter([1])</code>"/]:::pullClass
2v1[\"(2v1) <code>persist::&lt;'static&gt;()</code>"/]:::pullClass
3v1[\"(3v1) <code>defer_tick_lazy()</code>"/]:::pullClass
4v1[/"(4v1) <code>null()</code>"\]:::pushClass
5v1["(5v1) <code>handoff</code>"]:::otherClass
6v1[\"(6v1) <code>identity()</code>"/]:::pullClass
7v1["(7v1) <code>handoff</code>"]:::otherClass
3v1-->4v1
2v1-->5v1
1v1-->2v1
5v1-->6v1
6v1-->7v1
7v1--o3v1; linkStyle 5 stroke:red
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1
    2v1
end
subgraph sg_2v1 ["sg_2v1 stratum 0"]
    3v1
    4v1
end
subgraph sg_3v1 ["sg_3v1 stratum 1"]
    6v1
end
