dfir_rs/tests/snapshots/surface_scheduling__persist_stratum_run_available@graphvis_dot.snap
---
source: dfir_rs/tests/surface_scheduling.rs
expression: df.meta_graph().unwrap().to_dot(cfg)
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter([0])", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) persist::<'static>()", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) for_each(|x| out_send.send(x).unwrap())", shape=house, fillcolor="#ffff88"]
    n2v1 -> n3v1
    n1v1 -> n2v1
    subgraph sg_1v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        subgraph sg_1v1_var_a {
            cluster=true
            label="var a"
            n1v1
            n2v1
            n3v1
        }
    }
}
